# auth-app

./: .env.example  .gitignore  GOOGLE_OAUTH_SETUP.md  LICENSE  README.md  create_admin.py  docker-compose.yml  pyproject.toml  render.yaml  run_security_tests_optimized.py
Authentication_App/: asgi.py  settings.py  urls.py  views.py  wsgi.py
core/: admin.py  models.py
core/management/commands/: create_admin.py  wait_for_db.py
core/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_emailotp.py  0004_emailotp_attempts.py  0005_passwordhistory.py  0006_customuser_totp_secret.py  0007_alter_customuser_username.py  0008_alter_customuser_username.py  0009_alter_customuser_phone.py  0010_remove_customuser_last_device_and_more.py
core/tests/: test_models.py
docker/postgres/: docker-compose.yml
static/: admin.html  dashboard.html  email-verify.html  index.html  login.html  navbar.html  profile.html  register.html  reset-password.html  security.html
static/css/: style.css
static/js/: auth.js
user/: permissions.py  serializers.py  urls.py  utils.py  views.py
user/tests/: test_2fa_login_flow.py  test_2fa_views.py  test_account_lockout_fixed.py  test_activity_log.py  test_email_otp_api.py  test_password_change_api.py  test_phone_otp.py  test_security_comprehensive.py  test_throttling_views.py  test_user_api.py  test_utils_fns.py
